@@ -105,13 +105,13 @@ saveDependentsHashTable() ==
 
 getUsersOfConstructor(con) ==
   stream := readLib('USERS, 'DATABASE)
-  val := rread(con, stream)
+  val := rread_list(con, stream)
   RSHUT stream
   val
 
 getDependentsOfConstructor(con) ==
   stream := readLib('DEPENDENTS, 'DATABASE)
-  val := rread(con, stream)
+  val := rread_list(con, stream)
   RSHUT stream
   val
 
