@@ -1,3 +1,9 @@
+2013-11-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/compat.boot, src/interp/nlib.lisp,
+	src/interp/database.boot:  Fix HyperDoc errors in
+	'Dependants' and 'Users'.
+
 2013-11-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/aggcat.spad.pamphlet,
